--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img src="foto-profil.jpg" alt="Foto profil saya">
   <h1>Nama Lengkap Anda : Wahyu Nailil Karima</h1>
   <p>Siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya!</p>
-  <a href="https://www.instagram.com/karimwehehe">Kunjungi instagram saya</a>
+  <a href="https://www.instagram.com/karimwehehehe">Kunjungi instagram saya</a>
   <button id="SapaButton">Sapa Saya!</button>
   </div>
 <script src="script.js"></script>
