--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="Kartu-profil">
-  <img src="foto-profil.jpg" alt="Foto profil saya">
+  <img src="download (1).jpg" alt="Foto profil saya">
   <h1>Nama Lengkap Anda : Wahyu Nailil Karima</h1>
   <p>Siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya!</p>
   <a href="https://www.instagram.com/karimwehehehe">Kunjungi instagram saya</a>
